--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aa875982361/mini-wxml-render#readme",
   "devDependencies": {
+    "@oclif/command": "^1.8.0",
     "@types/node": "^16.9.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
