--- a/example-mini/app.json
+++ b/example-mini/app.json
@@ -2,7 +2,9 @@
   "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/logs-v2/logs"
+    "pages/logs-v2/logs",
+    "pages/calculate/calculate",
+    "pages/calculate-v2/calculate"
   ],
   "window": {
     "backgroundTextStyle": "light",
