增加生成的页面到总页面配置

--- a/example-mini/app.json
+++ b/example-mini/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/calculate/calculate"
+    "pages/calculate/calculate",
+    "pages/calculate-v2/calculate"
   ],
   "window": {
     "backgroundTextStyle": "light",
