--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "mini-wxml-render",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "将wxml文件编译成js，并组合页面js，变成一份渲染js， 并可以通过一个承载页面渲染。",
   "main": "src/index.js",
   "scripts": {
-    "start": "./nsc/bin/run genVmPage ./gen-page-config.json"
+    "start": "./nsc/bin/run genVmPage ./gen-page-config.json",
+    "prepack": "tsc && node ./copyShellFile.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aa875982361/mini-wxml-render.git"
+  },
+  "bin": {
+    "mini-wxml-render": "./dist/nsc/bin/run"
   },
   "keywords": [],
   "author": "pinghuang",
@@ -17,24 +21,24 @@
     "url": "https://github.com/aa875982361/mini-wxml-render/issues"
   },
   "homepage": "https://github.com/aa875982361/mini-wxml-render#readme",
-  "devDependencies": {
-    "@oclif/command": "^1.8.0",
-    "@types/node": "^16.9.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
-    "escodegen": "^2.0.0",
-    "himalaya": "^1.1.0",
-    "ts-node": "^8.10.2",
-    "tslib": "^2.0.0",
-    "tslint": "^6.1.2",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.9.7"
-  },
+  "devDependencies": {},
   "dependencies": {
     "acorn": "^8.0.1",
     "acorn-walk": "^8.0.0",
     "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7"
+    "@babel/preset-env": "^7.14.7",
+    "@oclif/command": "^1.8.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
+    "escodegen": "^2.0.0",
+    "himalaya": "^1.1.0",
+    "tslib": "^2.0.0",
+    "tslint": "^6.1.2",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-sonarts": "^1.9.0",
+    "@types/node": "^10.17.26",
+    "globby": "^10.0.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
