--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-wxml-render",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "将wxml文件编译成js，并组合页面js，变成一份渲染js， 并可以通过一个承载页面渲染。",
   "main": "src/index.js",
   "scripts": {
@@ -14,7 +14,10 @@
   "bin": {
     "mini-wxml-render": "dist/nsc/bin/run"
   },
-  "files":["package.json","dist"],
+  "files": [
+    "package.json",
+    "dist"
+  ],
   "keywords": [],
   "author": "pinghuang",
   "license": "MIT",
