feat: 增加生成的主要页面配置

--- a/miniprogram_demo/gen-page-config.json
+++ b/miniprogram_demo/gen-page-config.json
@@ -121,5 +121,6 @@
     {
       "pageJsPath": "./miniprogram/page/component/pages/webgl/webgl.js"
     }
-  ]
+  ],
+  "mainPage": "./miniprogram/page/component/pages/main/main.js"
 }
